--- a/.gitignore
+++ b/.gitignore
@@ -172,5 +172,11 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# gradle, idea, ...
+.gradle
+.idea
+.*
+
+
 # End of https://www.gitignore.io/api/git,java,maven,windows,eclipse
 
